--- a/YellowCab.ipynb
+++ b/YellowCab.ipynb
@@ -9,28 +9,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import sys\n",
+    "import random\n",
     "import numpy as np\n",
     "import scipy as sp\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "VendorID,tpep_pickup_datetime,tpep_dropoff_datetime,passenger_count,trip_distance,pickup_longitude,pickup_latitude,RatecodeID,store_and_fwd_flag,dropoff_longitude,dropoff_latitude,payment_type,fare_amount,extra,mta_tax,tip_amount,tolls_amount,improvement_surcharge,total_amount"
+    "### Load the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "taxidata = pd.read_csv(\"./data/2016-01.csv\", header=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define train and test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True,  True, False,  True,  True,  True,  True,  True,  True, False], dtype=bool)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "itrain, itest = train_test_split(xrange(taxidata.shape[0]), train_size=0.8)\n",
+    "mask=np.ones(taxidata.shape[0], dtype='int')\n",
+    "mask[itrain]=1\n",
+    "mask[itest]=0\n",
+    "mask = (mask==1)\n",
+    "mask[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop all of the columns except for the pickup and dropoff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X = taxidata[[\"pickup_longitude\", \"pickup_latitude\"]]\n",
+    "y = taxidata[[\"dropoff_longitude\", \"dropoff_latitude\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -39,75 +107,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10906858, 19)\n"
+      "(8725486, 2)\n",
+      "(1000000, 2)\n"
      ]
     }
    ],
    "source": [
-    "taxi_data = pd.read_csv(\"./data/2016-01.csv\", header=0)\n",
-    "print taxi_data.shape"
+    "Xtrain, Xtest, ytrain, ytest = X[mask], X[~mask], y[mask], y[~mask]\n",
+    "n_samples = Xtrain.shape[0]\n",
+    "n_features = Xtrain.shape[1]\n",
+    "\n",
+    "print Xtrain.shape\n",
+    "max_samples = 1000000\n",
+    "if Xtrain.shape[0] > max_samples:\n",
+    "    rows = random.sample(Xtrain.index, max_samples)\n",
+    "    Xtrain = Xtrain.ix[rows]\n",
+    "    ytrain = ytrain.ix[rows]\n",
+    "print Xtrain.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
-      "0         2  2016-01-01 00:00:00   2016-01-01 00:00:00                2   \n",
-      "1         2  2016-01-01 00:00:00   2016-01-01 00:00:00                5   \n",
-      "2         2  2016-01-01 00:00:00   2016-01-01 00:00:00                1   \n",
-      "3         2  2016-01-01 00:00:00   2016-01-01 00:00:00                1   \n",
-      "4         2  2016-01-01 00:00:00   2016-01-01 00:00:00                3   \n",
-      "\n",
-      "   trip_distance  pickup_longitude  pickup_latitude  RatecodeID  \\\n",
-      "0           1.10        -73.990372        40.734695           1   \n",
-      "1           4.90        -73.980782        40.729912           1   \n",
-      "2          10.54        -73.984550        40.679565           1   \n",
-      "3           4.75        -73.993469        40.718990           1   \n",
-      "4           1.76        -73.960625        40.781330           1   \n",
-      "\n",
-      "  store_and_fwd_flag  dropoff_longitude  dropoff_latitude  payment_type  \\\n",
-      "0                  N         -73.981842         40.732407             2   \n",
-      "1                  N         -73.944473         40.716679             1   \n",
-      "2                  N         -73.950272         40.788925             1   \n",
-      "3                  N         -73.962242         40.657333             2   \n",
-      "4                  N         -73.977264         40.758514             2   \n",
-      "\n",
-      "   fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
-      "0          7.5    0.5      0.5         0.0           0.0   \n",
-      "1         18.0    0.5      0.5         0.0           0.0   \n",
-      "2         33.0    0.5      0.5         0.0           0.0   \n",
-      "3         16.5    0.0      0.5         0.0           0.0   \n",
-      "4          8.0    0.0      0.5         0.0           0.0   \n",
-      "\n",
-      "   improvement_surcharge  total_amount  \n",
-      "0                    0.3           8.8  \n",
-      "1                    0.3          19.3  \n",
-      "2                    0.3          34.3  \n",
-      "3                    0.3          17.3  \n",
-      "4                    0.3           8.8  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print taxi_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "estimator = RandomForestRegressor(n_estimators=20, n_jobs=-1)"
+   ]
   }
  ],
  "metadata": {
