--- a/YellowCab.ipynb
+++ b/YellowCab.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import scipy as sp\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -51,30 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True, False,  True,  True,  True,  True,  True,  True, False], dtype=bool)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "itrain, itest = train_test_split(xrange(taxidata.shape[0]), train_size=0.8)\n",
+    "itrain, itest = train_test_split(xrange(taxidata.shape[0]), train_size = 0.8)\n",
     "mask=np.ones(taxidata.shape[0], dtype='int')\n",
-    "mask[itrain]=1\n",
-    "mask[itest]=0\n",
-    "mask = (mask==1)\n",
-    "mask[:10]"
+    "mask[itrain] = 1\n",
+    "mask[itest] = 0\n",
+    "mask = (mask == 1)"
    ]
   },
   {
@@ -86,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -128,14 +116,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "estimator = RandomForestRegressor(n_estimators=20, n_jobs=-1)"
+    "def cv_optimize(clf, parameters, X, y, n_jobs=1, n_folds=5, score_func=None, verbose=0):\n",
+    "    if score_func:\n",
+    "        gs = GridSearchCV(clf, param_grid=parameters, cv=n_folds, n_jobs=n_jobs, scoring=score_func, verbose=verbose)\n",
+    "    else:\n",
+    "        gs = GridSearchCV(clf, param_grid=parameters, n_jobs=n_jobs, cv=n_folds, verbose=verbose)\n",
+    "    gs.fit(X, y)\n",
+    "    print \"BEST\", gs.best_params_, gs.best_score_, gs.cv_results_, gs.scorer_\n",
+    "    print \"Best score: \", gs.best_score_\n",
+    "    best = gs.best_estimator_\n",
+    "    return best"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "clf = RandomForestRegressor(n_estimators=20, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
+      "[CV] max_features=auto, n_estimators=50, max_depth=50 ................\n",
+      "[CV]  max_features=auto, n_estimators=50, max_depth=50, score=-12.617640, total= 2.1min\n",
+      "[CV] max_features=auto, n_estimators=50, max_depth=50 ................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  2.4min remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  max_features=auto, n_estimators=50, max_depth=50, score=-13.343097, total= 1.9min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:  4.6min remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] max_features=auto, n_estimators=50, max_depth=50 ................\n",
+      "[CV]  max_features=auto, n_estimators=50, max_depth=50, score=-13.702323, total= 1.8min\n",
+      "[CV] max_features=auto, n_estimators=50, max_depth=50 ................\n",
+      "[CV]  max_features=auto, n_estimators=50, max_depth=50, score=-13.214341, total= 1.6min\n",
+      "[CV] max_features=auto, n_estimators=50, max_depth=50 ................\n",
+      "[CV]  max_features=auto, n_estimators=50, max_depth=50, score=-13.863260, total= 1.8min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed: 10.5min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BEST {'max_features': 'auto', 'n_estimators': 50, 'max_depth': 50} -13.3481324125 [mean: -13.34813, std: 0.43413, params: {'max_features': 'auto', 'n_estimators': 50, 'max_depth': 50}] make_scorer(mean_squared_error, greater_is_better=False)\n",
+      "Best score:  -13.3481324125\n",
+      "CPU times: user 39min 22s, sys: 47.8 s, total: 40min 10s\n",
+      "Wall time: 12min 49s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/site-packages/sklearn/model_selection/_search.py:667: DeprecationWarning: The grid_scores_ attribute was deprecated in version 0.18 in favor of the more elaborate cv_results_ attribute. The grid_scores_ attribute will not be available from 0.20\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "parameters = {\n",
+    "    \"n_estimators\": [50],  \n",
+    "    \"max_features\": [\"auto\"],\n",
+    "    \"max_depth\": [50]\n",
+    "}\n",
+    "\n",
+    "best = cv_optimize(clf, parameters, Xtrain, ytrain, n_folds=5, score_func='neg_mean_squared_error', verbose=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############# based on standard predict ################\n",
+      "R^2 on training data: 0.8376\n",
+      "R^2 on test data:     0.7437\n",
+      "CPU times: user 10min 9s, sys: 17.5 s, total: 10min 26s\n",
+      "Wall time: 3min 26s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "reg = best.fit(Xtrain, ytrain)\n",
+    "training_accuracy = reg.score(Xtrain, ytrain)\n",
+    "test_accuracy = reg.score(Xtest, ytest)\n",
+    "print \"############# based on standard predict ################\"\n",
+    "print \"R^2 on training data: %0.4f\" % (training_accuracy)\n",
+    "print \"R^2 on test data:     %0.4f\" % (test_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-73.96420963,  40.7740098 ]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best.predict([[-73.990371704101563, 40.734695434570313]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
